--- a/css/menu_comida.css
+++ b/css/menu_comida.css
@@ -46,3 +46,143 @@ body {
 .pie-pagina {
     bottom: 0;
 }
+
+.empty{
+    border:var(--border);
+    padding:1.5rem;
+    text-align: center;
+    width: 100%;
+    font-size: 2rem;
+    text-transform: capitalize;
+    color:var(--red);
+ }
+
+/*-------------------------SECCION DE LA BARRA DE BUSQUEDA----------------*/
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap');
+
+.contenedor {
+    text-align: center;
+    position: sticky;
+    top: 0; /* Fija el contenedor en la parte superior */
+    z-index: 3; /* Ajusta el índice z para asegurarte de que esté por encima de otros elementos */
+    background-color: white;
+}
+
+#menu-titulo{
+    height: 50px;
+}
+
+h1{
+    position:static;
+    top: 50%;
+    left: 50%;
+    font-family: "Red Hat Display", sans-serif;
+    font-size: 54px;
+    color: black;
+    justify-content: center; /* Centra horizontalmente */
+    align-items: center; /* Centra verticalmente */
+}
+
+#platillos{
+    height: 20vh;
+}
+
+.tacos {
+    color: black;
+    font-size: 80px;
+    position: relative;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    z-index: 2;
+    font-family: 'Red Hat Display', sans-serif;
+    color: rgb(231, 45, 54);
+  }
+  
+  .tacos::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    bottom: -30px; /* Coloca la barra 10 píxeles debajo del texto */
+    width: 40%; /* largo de la barra */
+    height: 10%; /* Grosor de la barra */
+    background: black;
+    transform: translateX(-50%); /* Centra la barra horizontalmente */
+  }
+  
+
+
+.menu-titulo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: "Red Hat Display", sans-serif;
+    font-size: 24px;
+    color: white;
+}
+
+.circulito {
+    display: inline-block;
+    width: 120px;
+    height: 120px;
+    overflow: hidden;
+    border-radius: 50%;
+    margin: 10px;
+    position: relative;
+    background-size: cover;
+    background-position: center;
+}
+
+.circulito::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: inherit;
+}
+
+.contenido {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.contenido img {
+    position: fixed;
+    /*filter: blur(1px);  Aplica un filtro de desenfoque */
+    opacity: 0.4; /* Ajusta la opacidad */
+}
+
+.contenedor span {
+    font-size: 20px;
+    color: white;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    pointer-events: none;
+    z-index: 1;
+    position: relative;
+    font-family: "Red Hat Display", sans-serif;
+    font-weight: 800;
+}
+
+.contenedor span :hover {
+    
+}
+
+.prueba{
+    height: 500vh;
+}
